--- a/index.html
+++ b/index.html
@@ -13,12 +13,30 @@
   </head>
   <body>
     <div class="container">
-      <h1>Hello World</h1>
-      <div class="d-grid gap-2 col-6 mx-auto">
-        <a href="#">
-          <button type="button" class="btn btn-primary">Click me</button>
-        </a>
+      <h1>New York</h1>
+      <ul>
+        <li>Friday 05:00</li>
+        <li>Clear</li>
+      </ul>
+      <div class="row">
+        <div class="col-6">
+          <img src="./sun.jpg" alt="Sunny" />
+          12℃ | ℉
+        </div>
+        <div class="col-6">
+          <ul>
+            <li>Precipitation: 0%</li>
+            <li>Humidity: 73%</li>
+            <li>Wind: 2km/hr</li>
+          </ul>
+        </div>
       </div>
+      <small>
+        <a href="https://github.com/FmBrands" target="_blank"
+          >Open-source code
+        </a>
+        by, Modupe Folarin (FmBrands)
+      </small>
     </div>
     <script src="src/index.js"></script>
   </body>
