--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
       </ul>
       <div class="row">
         <div class="col-6">
-          <img src="./sun.jpg" alt="Sunny" />
-          12℃ | ℉
+          <img src="./sun.jpg" width="50px" alt" ="Sunny" /> 12℃ | ℉
         </div>
         <div class="col-6">
           <ul>
