Added link to github

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         </div>
       </div>
       <small>
-        <a href="https://github.com/FmBrands" target="_blank"
+        <a
+          href="https://github.com/FmBrands/Weather-app-Vanilla"
+          target="_blank"
           >Open-source code
         </a>
         by, Modupe Folarin (FmBrands)
