--- a/index.html
+++ b/index.html
@@ -13,31 +13,33 @@
   </head>
   <body>
     <div class="container">
-      <h1>New York</h1>
-      <ul>
-        <li>Friday 05:00</li>
-        <li>Clear</li>
-      </ul>
-      <div class="row">
-        <div class="col-6">
-          <img src="./sun.jpg" width="50px" alt" ="Sunny" /> 12℃ | ℉
+      <div class="weather-app">
+        <h1>New York</h1>
+        <ul>
+          <li>Friday 05:00</li>
+          <li>Clear</li>
+        </ul>
+        <div class="row">
+          <div class="col-6">
+            <img src="./sun.jpg" width="50px" alt="Sunny" /> 12℃ | ℉
+          </div>
+          <div class="col-6">
+            <ul>
+              <li>Precipitation: 0%</li>
+              <li>Humidity: 73%</li>
+              <li>Wind: 2km/hr</li>
+            </ul>
+          </div>
         </div>
-        <div class="col-6">
-          <ul>
-            <li>Precipitation: 0%</li>
-            <li>Humidity: 73%</li>
-            <li>Wind: 2km/hr</li>
-          </ul>
-        </div>
+        <small>
+          <a
+            href="https://github.com/FmBrands/Weather-app-Vanilla-"
+            target="_blank"
+            >Open-source code
+          </a>
+          by, Modupe Folarin (FmBrands)
+        </small>
       </div>
-      <small>
-        <a
-          href="https://github.com/FmBrands/Weather-app-Vanilla-"
-          target="_blank"
-          >Open-source code
-        </a>
-        by, Modupe Folarin (FmBrands)
-      </small>
     </div>
     <script src="src/index.js"></script>
   </body>
