--- a/index.html
+++ b/index.html
@@ -16,17 +16,40 @@
     <div class="container">
       <div class="weather-app-wrapper">
         <div class="weather-app">
-          <h1>New York</h1>
-          <ul>
-            <li>Friday 05:00</li>
-            <li>Clear</li>
-          </ul>
+          <form id="search-form">
+            <div class="row">
+              <div class="col-9">
+                <input
+                  type="search"
+                  placeholder="Type a city..."
+                  class="form-control"
+                />
+              </div>
+              <div class="col-3">
+                <input
+                  type="submit"
+                  value="Search"
+                  class="btn btn-primary w-100"
+                />
+              </div>
+            </div>
+          </form>
+          <div class="overview">
+            <h1>New York</h1>
+            <ul>
+              <li>Friday 05:00</li>
+              <li>Clear</li>
+            </ul>
+          </div>
           <div class="row">
             <div class="col-6">
-              <div>
-                <img src="./sun.jpg" width="100px" alt="Clear" />
+              <div class="d-flex weather-temperature">
+                <img src="./sun.jpg" alt="Clear" class="float-left" />
+                <div class="float-left">
+                  <strong>12</strong
+                  ><span class="units">℃ | <a href="#"> ℉</a></span>
+                </div>
               </div>
-              12 ℃ | ℉
             </div>
             <div class="col-6">
               <ul>
