--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             </div>
           </form>
           <div class="overview">
-            <h1>New York</h1>
+            <h1 id="city"></h1>
             <ul>
               <li>Friday 05:00</li>
-              <li>Clear</li>
+              <li id="description">Clear</li>
             </ul>
           </div>
           <div class="row">
@@ -47,14 +47,13 @@
               <div class="d-flex weather-temperature">
                 <img src="./sun.jpg" alt="Clear" class="float-left" />
                 <div class="float-left">
-                  <strong>12</strong
+                  <strong id="temperature">12</strong
                   ><span class="units">℃ | <a href="#"> ℉</a></span>
                 </div>
               </div>
             </div>
             <div class="col-6">
               <ul>
-                <li>Precipitation: 0%</li>
                 <li>Humidity: 73%</li>
                 <li>Wind: 2km/hr</li>
               </ul>
