Included humidity and wind

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             </div>
             <div class="col-6">
               <ul>
-                <li>Humidity: 73%</li>
-                <li>Wind: 2km/hr</li>
+                <li>Humidity: <span id="humidity"> 73</span>%</li>
+                <li>Wind: <span id="wind">2</span> km/hr</li>
               </ul>
             </div>
           </div>
