--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="overview">
             <h1 id="city"></h1>
             <ul>
-              <li id="date"></li>
+              <li>Last updated: <span id="date"></span></li>
               <li id="description">Clear</li>
             </ul>
           </div>
