--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <div class="row">
             <div class="col-6">
               <div class="d-flex weather-temperature">
-                <img src="./sun.jpg" alt="Clear" class="float-left" />
+                <img src="" alt="Clear" class="float-left" id="icon" />
                 <div class="float-left">
                   <strong id="temperature">12</strong
                   ><span class="units">℃ | <a href="#"> ℉</a></span>
