--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                   type="search"
                   placeholder="Type a city..."
                   class="form-control"
+                  id="search-form"
                 />
               </div>
               <div class="col-3">
