--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                   type="submit"
                   value="Search"
                   class="btn btn-primary w-100"
+                  id="search-city"
                 />
               </div>
             </div>
