completed the search engine

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                   type="search"
                   placeholder="Type a city..."
                   class="form-control"
-                  id="search-form"
+                  id="city-input"
                 />
               </div>
               <div class="col-3">
@@ -32,7 +32,8 @@
                   type="submit"
                   value="Search"
                   class="btn btn-primary w-100"
-                  id="search-city"
+                  id="search-form"
+                  autocomplete="off"
                 />
               </div>
             </div>
