--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
                 <img src="" alt="Clear" class="float-left" id="icon" />
                 <div class="float-left">
                   <strong id="temperature">12</strong
-                  ><span class="units">℃ | <a href="#"> ℉</a></span>
+                  ><span class="units"
+                    >℃ | <a href="#" id="fahrenheit-link"> ℉</a></span
+                  >
                 </div>
               </div>
             </div>
