--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="float-left">
                   <strong id="temperature">12</strong
                   ><span class="units"
-                    ><a href="#" id="celcius-link"> ℃ </a>|
+                    ><a href="#" id="celcius-link" class="active"> ℃ </a>|
                     <a href="#" id="fahrenheit-link"> ℉</a></span
                   >
                 </div>
