--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
           <div class="row">
             <div class="col-6">
               <div class="d-flex weather-temperature">
-                <img src="" alt="Clear" class="float-left" 
-                id="icon" />
+                <img src="" alt="Clear" id="icon" class="float-left" />
                 <div class="float-left">
                   <strong id="temperature">12</strong
                   ><span class="units"
